feat: create findClientByDentistId
