# swagger.json
@@ -278,6 +278,35 @@
           }
         }
       }
+    },
+    "/client/{dentistId}/dentist": {
+      "get": {
+        "tags": ["Client"],
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "dentistId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "200": {
+            "description": "Get a client by dentist Id"
+          }
+        }
+      }
     }
   }
 }
